# spiddy

ast/: Cargo.toml
ast/src/: de_bruijn.rs  lib.rs  syntax.rs
benchmark/: Cargo.toml
benchmark/src/: main.rs
compiler/: Cargo.toml
compiler/benchmark/: perf.sh
compiler/examples/: apply_???.spd  apply_backslash.spd  omega.spd  omega_newline.spd  parens_apply_backslash.spd  unexpected_symbol.spd
compiler/src/: main.rs
errors/: Cargo.toml
errors/src/: lib.rs
eval/: Cargo.toml
eval/src/: heap.rs  lib.rs  stack.rs  value.rs
generate/: Cargo.toml
generate/src/: lib.rs  main.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
pretty/: Cargo.toml
pretty/src/: lib.rs
span/: Cargo.toml
span/src/: lib.rs
spiddy/: Cargo.toml
spiddy/src/: main.rs
