[package]
name = "generate"
version = "0.1.0"
authors = ["Isaac Elliott <isaace71295@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
ast = { path = "../ast" }
pretty = { path = "../pretty" }
